--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ sublime2/User/Package\ Control.sublime-settings
 sublime2/User/Package Control.last-run
 git/gitconfig.symlink
 nvim/plugged
+nvim/.init.vim-rplugin~
+nvim/autoload/plug.vim.old
